crates/tsdi-codegen/tests/snapshots/emit_snapshots__emit_async_provides_uses_resolve_phase.snap
---
source: crates/tsdi-codegen/tests/emit_snapshots.rs
expression: out
---
// AUTO-GENERATED by tsdi v0.0.1. Do not edit.
// Source: ./app-component.ts
import { App } from "./app-component";
import { Db } from "./db";
import { DatabaseModule } from "./db-module";
import { Pool } from "./pool";
export class DaggerApp extends App {
	private _pool: Pool | undefined;
	private getPool(): Pool {
		return this._pool!;
	}
	private getDb(): Db {
		return DatabaseModule.db(this.getPool());
	}
	static async _resolve(d: DaggerApp): Promise<void> {
		d._pool = await DatabaseModule.pool();
	}
	pool(): Pool {
		return this.getPool();
	}
	db(): Db {
		return this.getDb();
	}
	static async create(): Promise<App> {
		const d = new DaggerApp();
		await DaggerApp._resolve(d);
		return d;
	}
}
export async function createApp(): Promise<App> {
	return DaggerApp.create();
}
