crates/tsdi-codegen/tests/snapshots/emit_snapshots__emit_into_set_aggregates_contributions.snap
---
source: crates/tsdi-codegen/tests/emit_snapshots.rs
expression: out
---
// AUTO-GENERATED by tsdi v0.0.1. Do not edit.
// Source: ./app-component.ts
import { App } from "./app-component";
import { Plugin } from "./plugin";
import { PluginsModule } from "./plugins-module";
export class DaggerApp extends App {
	private getSetOfPlugin(): Set<Plugin> {
		return new Set([PluginsModule.auth(), PluginsModule.logging()]);
	}
	plugins(): Set<Plugin> {
		return this.getSetOfPlugin();
	}
	static create(): App {
		return new DaggerApp();
	}
}
export function createApp(): App {
	return DaggerApp.create();
}
