crates/tsdi-codegen/tests/snapshots/emit_snapshots__emit_simple_provides_module.snap
---
source: crates/tsdi-codegen/tests/emit_snapshots.rs
expression: out
---
// AUTO-GENERATED by tsdi v0.0.1. Do not edit.
// Source: ./coffee-component.ts
import { CoffeeShop } from "./coffee-component";
import { CoffeeModule, Heater, Pump } from "./coffee-module";
export class DaggerCoffeeShop extends CoffeeShop {
	private getHeater(): Heater {
		return CoffeeModule.heater();
	}
	private getPump(): Pump {
		return CoffeeModule.pump(this.getHeater());
	}
	pump(): Pump {
		return this.getPump();
	}
	heater(): Heater {
		return this.getHeater();
	}
	static create(): CoffeeShop {
		return new DaggerCoffeeShop();
	}
}
export function createCoffeeShop(): CoffeeShop {
	return DaggerCoffeeShop.create();
}
