crates/tsdi-codegen/tests/snapshots/emit_snapshots__emit_singleton_caches_via_lazy_field.snap
---
source: crates/tsdi-codegen/tests/emit_snapshots.rs
expression: out
---
// AUTO-GENERATED by tsdi v0.0.1. Do not edit.
// Source: ./shop-component.ts
import { Heater } from "./heater";
import { Pump } from "./pump";
import { Shop } from "./shop-component";
export class DaggerShop extends Shop {
	private _heater: Heater | undefined;
	private getHeater(): Heater {
		return this._heater ??= new Heater();
	}
	private getPump(): Pump {
		return new Pump(this.getHeater());
	}
	pump(): Pump {
		return this.getPump();
	}
	heater(): Heater {
		return this.getHeater();
	}
	static create(): Shop {
		return new DaggerShop();
	}
}
export function createShop(): Shop {
	return DaggerShop.create();
}
