crates/tsdi-codegen/tests/snapshots/emit_snapshots__emit_subcomponent_with_inherited_dep_and_local_factory.snap
---
source: crates/tsdi-codegen/tests/emit_snapshots.rs
expression: out
---
// AUTO-GENERATED by tsdi v0.0.1. Do not edit.
// Source: ./app-component.ts
import { App } from "./app-component";
import { Heater } from "./heater";
import { Pump } from "./pump";
import { RequestComponent } from "./request-component";
export class DaggerApp extends App {
	private _heater: Heater | undefined;
	private getHeater(): Heater {
		return this._heater ??= new Heater();
	}
	getPump(): Pump {
		return new Pump(this.getHeater());
	}
	heater(): Heater {
		return this.getHeater();
	}
	requestComponent(): RequestComponent {
		return new DaggerRequestComponent(this);
	}
	static create(): App {
		return new DaggerApp();
	}
}
export function createApp(): App {
	return DaggerApp.create();
}
export class DaggerRequestComponent extends RequestComponent {
	constructor(private parent: DaggerApp) {
		super();
	}
	pump(): Pump {
		return this.parent.getPump();
	}
}
